<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/trailerTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/aleo"
        android:maxLines="3"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playImageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trailerSiteTextView"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/trailer_title" />

    <TextView
        android:id="@+id/trailerSiteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:text="@string/youtube"
        app:layout_constraintStart_toStartOf="@+id/trailerTitleTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/playImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/play_arrow_24dp"
        android:contentDescription="@string/play_trailer"/>
</androidx.constraintlayout.widget.ConstraintLayout>