<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/posterImageView"
        android:layout_marginHorizontal="16dp"
        android:contentDescription="@string/poster_description"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/releaseDateTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/aleo"
                android:textColor="#a6a6a6"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView"
                tools:text="@string/Date_Label" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/releaseDateTextView">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:layout_editor_absoluteX="165dp"
                    tools:layout_editor_absoluteY="82dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ratingstar"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteX="88dp"
                        tools:layout_editor_absoluteY="58dp"
                        android:contentDescription="@string/star"/>

                    <TextView
                        android:id="@+id/ratingTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="5dp"
                        android:fontFamily="@font/aleo"
                        android:textColor="#172845"
                        tools:layout_editor_absoluteX="88dp"
                        tools:layout_editor_absoluteY="74dp"
                        tools:text="@string/Rating_Label" />
                </LinearLayout>

                <ToggleButton
                    android:id="@+id/favouriteToggleButton"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:background="@drawable/custom_toggle_button"
                    android:text="@string/Favourite_Button"
                    android:textOff=""
                    android:textOn=""
                    tools:layout_editor_absoluteX="218dp"
                    tools:layout_editor_absoluteY="93dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="5"
                android:fontFamily="@font/arvo"
                android:maxLines="2"
                android:textColor="#172845"
                android:textSize="20sp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/Title_Label" />





        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Synopsis_Label"
            android:fontFamily="@font/aleo"
            android:textStyle="bold"
            android:textColor="#172845"
            android:layout_marginHorizontal="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/synopsisTextView"
            tools:text="@string/Synopsis"
            android:textColor="#172845"
            android:fontFamily="@font/aleo"
            android:layout_marginHorizontal="16dp"/>

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/trailerTextView"
                android:text="@string/Trailers_Label"
                android:fontFamily="@font/aleo"
                android:textStyle="bold"
                android:textColor="#172845"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/trailerEmptyView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/no_reviews"
                    android:visibility="gone"/>
                <ProgressBar
                    android:id="@+id/trailerLoadingIndicator"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/trailerListView"
                    android:visibility="gone"
                    android:nestedScrollingEnabled="true"/>
            </RelativeLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reviewsTextView"
                android:text="@string/Reviews_Label"
                android:fontFamily="@font/aleo"
                android:textStyle="bold"
                android:textColor="#172845"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/reviewEmptyView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/no_reviews"
                    android:visibility="gone"/>
                <ProgressBar
                    android:id="@+id/reviewLoadingIndicator"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/reviewListView"
                    android:visibility="gone"
                    android:nestedScrollingEnabled="true"/>

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>